# radeon-asm-tools

./: .editorconfig  .gitattributes  .gitignore  MANUAL.md  README.md  RadeonAsmDebugger.sln  debug.py  debug_bin.py  disassemble.py  install.bat  profiler.py  publish.bat  release.bat  viewer.py
Example/: Dockerfile  README.md
Example/DebuggerProjectExample/: DebuggerProjectExample.sln
Example/VectorAddProjectExample/: CMakeLists.txt
Example/VectorAddProjectExample/common/: CMakeLists.txt  dispatch.cpp  dispatch.hpp  op_params.cpp  op_params.hpp
Example/VectorAddProjectExample/common/debugger/: breakpoint_gcnasm.pl  dbg_clang_wrapper.sh  vadd_debug.sh
Example/VectorAddProjectExample/common/debugger/DebugServerLinux64/: RadeonAsmDebugServer  RadeonAsmDebugServer.deps.json
Example/VectorAddProjectExample/common/debugger/include/: gpr_alloc.inc
Example/VectorAddProjectExample/gfx9/: CMakeLists.txt  fp32_v_add.cpp  fp32_v_add.s
Example/VectorAddProjectExample/gfx9/include/: common.inc  metadata.inc
VSRAD.Build/: VSRAD.Build.csproj
VSRAD.BuildTools/: IPCBridge.cs  IPCBuildResult.cs  RemoteBuildStderrParser.cs  RemoteBuildTask.cs  SourceValidationBuild.cs  SourceValidationMessageParser.cs  SourceValidationProcess.cs  VSRAD.BuildTools.csproj
VSRAD.BuildTools/Errors/: LineMapper.cs  Message.cs  Parser.cs
VSRAD.BuildTools/Properties/: AssemblyInfo.cs
VSRAD.BuildToolsTests/: IPCBridgeTests.cs  RemoteBuildStderrParserTests.cs  RemoteBuildTaskTests.cs  VSRAD.BuildToolsTests.csproj
VSRAD.BuildToolsTests/Errors/: LineMapperTests.cs  ParserTests.cs
VSRAD.Deborgar/: AD7Enums.cs  AD7Events.cs  Breakpoint.cs  BreakpointManager.cs  BreakpointResolution.cs  Constants.cs  DebugEngine.cs  DebugProgram.cs  DebugThread.cs  DebugThreadFrame.cs  EngineCallback.cs  ExecutionController.cs  IEngineIntegration.cs  Key.snk  Program.cs  SourceFileLineContext.cs  StackFrame.cs  VSRAD.Deborgar.csproj  app.config
VSRAD.Deborgar/Properties/: AssemblyInfo.cs
VSRAD.Deborgar/Remote/: RemotePort.cs  RemotePortSupplier.cs  RemoteProcess.cs
VSRAD.DeborgarTests/: DebugEngineTests.cs  DebugProgramTests.cs  Helpers.cs  ProgramTests.cs  VSRAD.DeborgarTests.csproj
VSRAD.DeborgarTests/Properties/: AssemblyInfo.cs
VSRAD.DebugServer/: CliOptions.cs  Client.cs  ConnectionFailedException.cs  Dispatcher.cs  FileMetadata.cs  NetworkClient.cs  ObservableProcess.cs  Program.cs  Server.cs  TextDebuggerOutputParser.cs  VSRAD.DebugServer.csproj  publish.bat
VSRAD.DebugServer/Handlers/: CheckOutdatedFilesHandler.cs  DeployHandler.cs  ExchangeVersionsHandler.cs  ExecuteHandler.cs  FetchMetadataHandler.cs  FetchResultRangeHandler.cs  GetFileHandler.cs  GetFilesHandler.cs  GetMinimalExtensionVersionHandler.cs  GetServerCapabilitiesHandler.cs  IHandler.cs  ListEnvironmentVariablesHandler.cs  ListFilesHandler.cs  PutDirectoryHandler.cs  PutFileHandler.cs  PutFilesHandler.cs  SendFileHandler.cs
VSRAD.DebugServer/IPC/: Capabilities.cs  Commands.cs  IPCSerialization.cs  Responses.cs  StreamExtensions.cs
VSRAD.DebugServerTests/: ServerTests.cs  VSRAD.DebugServerTests.csproj
VSRAD.Package/: .gitignore  Colors.cs  Constants.cs  Errors.cs  ProjectProperties.cs  ProjectTypeRegistration.cs  ProvideDebugEngineAttribute.cs  ProvideDebugPortSupplierAttribute.cs  VSLanguageInfo.cs  VSPackage.cs  VSPackage.resx  VSRAD.Package.csproj  VSRAD.Package.ruleset  VSRAD.Package.tt  VSRAD.Package.vsct  app.config  source.extension.vsixmanifest
VSRAD.Package/Commands/: BaseCommand.cs  (+22 more)
VSRAD.PackageTests/: Key.snk  MockCommunicationChannel.cs  TestHelper.cs  VSRAD.PackageTests.csproj  app.config
VSRAD.ProjectItemTemplate/: RADProjectItem.vstemplate  VSRAD.ProjectItemTemplate.csproj  main.s
VSRAD.ProjectTemplate/: RADProject.radproj  RADProject.radproj.user.json  RADProject.vstemplate  VSRAD.ProjectTemplate.csproj  start.s
VSRAD.Syntax/: Constants.cs  Key.snk  Package.cs  Package.vsct  README.md  RadeonAsmSyntaxColors.pkgdef  RadeonServiceProvider.cs  VSPackage.resx  VSRAD.Syntax.csproj  packages.config  source.extension.vsixmanifest
VSRAD.SyntaxPackageBridge/: ISyntaxPackageBridge.cs  Key.snk  VSRAD.SyntaxPackageBridge.csproj
VSRAD.SyntaxParser/: Key.snk  RadAsm1.g4  RadAsm2.g4  RadAsm2Lexer.g4.cs  RadAsmDoc.g4  RadAsmLexer.g4.cs  VSRAD.SyntaxParser.csproj  radasm.g4
hooks/: install  prepare-commit-msg
(+596 files in other folders)
